fix bug 159328, and probably bug 146673 - use locale-insensitive string comparisons in strings so we don't break when doing case-insensitive matching of simple ASCII strings in non-US locales, like "SubMIT" != "submit" r=brade, sr=dbaron